// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchPage unit test Pagination should match snapshot with prev/next buttons 1`] = `
<div
  className="searchBox"
>
  <mock-SearchBar
    handleChange={[Function]}
  />
  <mock-CharactersList
    characters={
      Array [
        Object {
          "id": 1,
          "name": "test",
        },
      ]
    }
    selectCharacter={[Function]}
  />
  <div
    className="buttons"
  >
    <button
      className="navigationButtons"
      onClick={[Function]}
    >
      Prev
    </button>
    <button
      className="navigationButtons"
      onClick={[Function]}
    >
      next
    </button>
  </div>
</div>
`;

exports[`SearchPage unit test should match snapshot without prev/next buttons 1`] = `
<div
  className="searchBox"
>
  <mock-SearchBar
    handleChange={[Function]}
  />
  <mock-CharactersList
    characters={
      Array [
        Object {
          "id": 1,
          "name": "test",
        },
      ]
    }
    selectCharacter={[Function]}
  />
  <div
    className="buttons"
  />
</div>
`;
